--- a/src/renderer/pages/EventPage/EventPage.css
+++ b/src/renderer/pages/EventPage/EventPage.css
@@ -36,6 +36,9 @@ button:hover {
   background-color: #c82333;
 }
 
+next_button {
+  align-content: end;
+}
 button {
   background-color: #dc3545;
   color: white;
@@ -111,4 +114,16 @@ li button {
 
 li button:hover {
   background-color: #c82333;
+}
+
+.button-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.next-button {
+  margin-left: auto;
+  margin-right: 5%;
 }
